--- a/HWK4/HWK4/appsettings.json
+++ b/HWK4/HWK4/appsettings.json
@@ -1,4 +1,4 @@
-{
+{ //Added MySQL connection string
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;username=root;password=Stonehedge@5248;database=bill;"
   },
