--- a/HWK4/HWK4/Properties/launchSettings.json
+++ b/HWK4/HWK4/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "HWK4": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7103;http://localhost:5030",
       "environmentVariables": {
