--- a/HWK4/HWK4/Properties/launchSettings.json
+++ b/HWK4/HWK4/Properties/launchSettings.json
@@ -12,7 +12,11 @@
     "HWK4": {
       "commandName": "Project",
       "dotnetRunMessages": true,
+
+      "launchBrowser": false,
+
       "launchBrowser": true,
+
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7103;http://localhost:5030",
       "environmentVariables": {
